store data in csv

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -9,10 +9,10 @@
   <p><%= @subtitle %></p>
   <form action="/" method="post">
     <div>
-      <input type="text" id="title" name="title[]">
+      <input type="text" id="title" name="title">
     </div>
     <div>
-      <textarea type="text" id="content" name="content[]"></textarea>
+      <textarea type="text" id="content" name="content"></textarea>
     </div>
     <div>
       <button type="button" onclick="location.href='/'">back</button>
