--- a/views/index.erb
+++ b/views/index.erb
@@ -2,16 +2,16 @@
 <html lang="ja">
 <head>
   <mata charset="utf-8">
-  <title><%= @title %></title>
+  <title><%= @main_title %></title>
 </head>
 <body>
-  <h1><%= @title %></h1>
+  <h1><%= @main_title %></h1>
   <p><%= @subtitle %></p>
   <button type="button" onclick="location.href='/new'">new</button>
   <ul>
-    <% @titles.each do |title| %>
-    <li data-id= "<%= title %>">
-        <%= title %>
+    <% @titles.each_with_index do |title, i| %>
+    <li>
+        <a href= "/<%= i %>" ><%= title %></a>
     </li>
     <% end %>
   </ul>
