--- a/views/add_item.erb
+++ b/views/add_item.erb
@@ -15,10 +15,10 @@
       <textarea type="text" id="content" name="content"><%= @content %></textarea>
     </div>
     <div>
-      <button type="button" onclick="location.href='/<%= @index %>'">back</button>
+      <button type="button" onclick="location.href='/'">back</button>
     <div>
     <div>
-      <input type="submit" value="<%= @button %>">
+      <input type="submit" value="send">
     </div>
   </form>
   <p><%= Time.now %></p>
