--- a/views/deleted.erb
+++ b/views/deleted.erb
@@ -7,14 +7,7 @@
 <body>
   <h1><%= @main_title %></h1>
   <p><%= @subtitle %></p>
-  <button type="button" onclick="location.href='/new'">add</button>
-  <ul>
-    <% @titles.each_with_index do |title, i| %>
-    <li>
-        <a href= "/<%= i %>" ><%= title %></a>
-    </li>
-    <% end %>
-  </ul>
+  <button type="button" onclick="location.href='/'">home</button>
   <p><%= Time.now %></p>
 </body>
 </html>
