summarize erb to confirm.erb

--- a/views/add_item.erb
+++ b/views/add_item.erb
@@ -1,5 +1,5 @@
 <p><%= @subtitle %></p>
-<form action="/" method="post">
+<form action="/new/confirm" method="post">
   <div>
     <input type="text" id="title" name="title" value =<%= @title %>>
   </div>
