--- a/views/edit_item.erb
+++ b/views/edit_item.erb
@@ -1,5 +1,5 @@
 <p><%= @subtitle %></p>
-<form action="/<%= @index %>/edited" method="post">
+<form action="/<%= @index %>/edit/confirm" method="post">
   <div>
     <input type="text" id="title" name="title" value =<%= @title %>>
   </div>
