--- a/views/show_item.erb
+++ b/views/show_item.erb
@@ -2,7 +2,7 @@
 <form action="<%= @index %>/deleted" method="post">
 <p><%= @content.gsub(/\n/, '<br/>') %></p>
 <div>
-  <button type="button" onclick="location.href='/'">back</button>
+  <button type="button" onclick="location.href='/'">home</button>
 </div>
 <div>
   <button type="button" onclick="location.href='<%= @index %>/edit'">edit</button>
