--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,4 @@
-<p><%= @subtitle %></p>
-<button type="button" onclick="location.href='/new'">add</button>
+<button type="button" onclick="location.href='/new'">new</button>
 <ul>
   <% @titles.each_with_index do |title, i| %>
   <li>
