--- a/views/add_item.erb
+++ b/views/add_item.erb
@@ -1,4 +1,4 @@
-<form action="/new/confirm" method="post">
+<form action="/new" method="post">
   <div>
     <input type="text" id="title" name="title" value =<%= @title %>>
   </div>
