--- a/views/edit_item.erb
+++ b/views/edit_item.erb
@@ -1,4 +1,4 @@
-<form action="/<%= @index %>/edit/confirm" method="post">
+<form action="/<%= @index %>/edit" method="post">
   <div>
     <input type="text" id="title" name="title" value =<%= @title %>>
   </div>
